some more changes to the simulation. smoother now. :)

--- a/simulation/using_sympy.ipynb
+++ b/simulation/using_sympy.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "797a742b",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2800c131",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "137a7d1e",
    "metadata": {},
    "outputs": [
@@ -79,6 +79,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "189b9b41",
+   "metadata": {},
+   "source": [
+    "The result is correct, yay."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "55bb4d66",
    "metadata": {},
    "source": [
@@ -89,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "c67051d1",
    "metadata": {},
    "outputs": [
@@ -117,6 +125,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "58ffb7de",
+   "metadata": {},
+   "source": [
+    "This isn't very easy to read - we will use `pprint()` to display the results in a nicer form."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "09e3aabd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Derivative with respect to x:\n",
+      "    2                     \n",
+      " sin (y) + 1 ⎛   2       ⎞\n",
+      "x           ⋅⎝sin (y) + 1⎠\n",
+      "──────────────────────────\n",
+      "            x             \n",
+      "Derivative with respect to y:\n",
+      "      2                            \n",
+      "   sin (y) + 1                     \n",
+      "2⋅x           ⋅log(x)⋅sin(y)⋅cos(y)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Derivative with respect to x:\")\n",
+    "sym.pprint(dfx)\n",
+    "print(\"Derivative with respect to y:\")\n",
+    "sym.pprint(dfy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "689b7ea6",
+   "metadata": {},
+   "source": [
+    "It's a bit hacky, but it gets the job done."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6271e2ca",
    "metadata": {},
    "source": [
@@ -126,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "7352f928",
    "metadata": {},
    "outputs": [
@@ -171,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "02b1a3b1",
    "metadata": {},
    "outputs": [
@@ -272,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
