yay, added ruff.

--- a/simulation/inverted_pendulum_modelling.ipynb
+++ b/simulation/inverted_pendulum_modelling.ipynb
@@ -73,16 +73,26 @@
     "import sympy as sym\n",
     "from sympy.physics.control import *\n",
     "\n",
-    "x_3, x_4, F = sym.symbols('x_3, x_4, F', real = True)\n",
-    "M, m, l, g = sym.symbols('M, m, l, g', positive = True)\n",
+    "x_3, x_4, F = sym.symbols(\"x_3, x_4, F\", real=True)\n",
+    "M, m, l, g = sym.symbols(\"M, m, l, g\", positive=True)\n",
     "\n",
-    "phi = (4*m*l*x_4**2*sym.sin(x_3) + 4*F - 3*m*g*sym.sin(x_3)*sym.cos(x_3))/(4 * (M + m) - 3 * m * sym.cos(x_3)**2)\n",
+    "phi = (\n",
+    "    4 * m * l * x_4**2 * sym.sin(x_3) + 4 * F - 3 * m * g * sym.sin(x_3) * sym.cos(x_3)\n",
+    ") / (4 * (M + m) - 3 * m * sym.cos(x_3) ** 2)\n",
     "print(\"Phi = \")\n",
     "sym.pprint(phi)\n",
     "\n",
-    "psi = -3 * (m * l * x_4**2 * sym.sin(x_3) * sym.cos(x_3) + F * sym.cos(x_3) - (M + m) * g * sym.sin(x_3))/((4 * (M + m) - 3 * m * sym.cos(x_3)**2) * l)\n",
+    "psi = (\n",
+    "    -3\n",
+    "    * (\n",
+    "        m * l * x_4**2 * sym.sin(x_3) * sym.cos(x_3)\n",
+    "        + F * sym.cos(x_3)\n",
+    "        - (M + m) * g * sym.sin(x_3)\n",
+    "    )\n",
+    "    / ((4 * (M + m) - 3 * m * sym.cos(x_3) ** 2) * l)\n",
+    ")\n",
     "print(\"Psi = \")\n",
-    "sym.pprint(psi)\n"
+    "sym.pprint(psi)"
    ]
   },
   {
@@ -257,7 +267,7 @@
     }
    ],
    "source": [
-    "psi_0 = psi.subs([(F,F_0), (x_3, x_3_0), (x_4, x_4_0)])\n",
+    "psi_0 = psi.subs([(F, F_0), (x_3, x_3_0), (x_4, x_4_0)])\n",
     "sym.pprint(psi_0)"
    ]
   },
@@ -392,9 +402,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a, b, c, d, t = sym.symbols('a, b, c, d, t', positive = True)\n",
-    "s = sym.symbols('s')\n",
-    "G_x = (a*s**2+(b*c)/(1-d))/(s**4)"
+    "a, b, c, d, t = sym.symbols(\"a, b, c, d, t\", positive=True)\n",
+    "s = sym.symbols(\"s\")\n",
+    "G_x = (a * s**2 + (b * c) / (1 - d)) / (s**4)"
    ]
   },
   {
@@ -432,7 +442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G_theta = -c/(s**2-d)"
+    "G_theta = -c / (s**2 - d)"
    ]
   },
   {
@@ -489,11 +499,11 @@
     "sym.pprint(x_3)\n",
     "\n",
     "x_3plot = x_3.subs([(c, 1), (d, 1)])\n",
-    "p = sym.plot(x_3plot, (t,-15,15), legend = True, show = False)\n",
+    "p = sym.plot(x_3plot, (t, -15, 15), legend=True, show=False)\n",
     "x_3plot2 = x_3.subs([(c, 2), (d, 2)])\n",
-    "p.extend(sym.plot(x_3plot2, legend = True, line_color='g', show = False))\n",
+    "p.extend(sym.plot(x_3plot2, legend=True, line_color=\"g\", show=False))\n",
     "x_3plot2 = x_3.subs([(c, 1), (d, 2)])\n",
-    "p.extend(sym.plot(x_3plot2, legend = True, line_color='r', show = False))\n",
+    "p.extend(sym.plot(x_3plot2, legend=True, line_color=\"r\", show=False))\n",
     "p.show()"
    ]
   },
@@ -534,20 +544,20 @@
     }
    ],
    "source": [
-    "F = 1/s\n",
+    "F = 1 / s\n",
     "X_3 = G_theta * F\n",
     "x_3 = sym.inverse_laplace_transform(X_3, s, t)\n",
     "sym.pprint(x_3)\n",
     "\n",
     "# TODO fix?\n",
     "x_3plot = x_3.subs([(c, 1), (d, 1)])\n",
-    "p = sym.plot(x_3plot, (t,-15,15), legend = True, show = False)\n",
+    "p = sym.plot(x_3plot, (t, -15, 15), legend=True, show=False)\n",
     "x_3plot2 = x_3.subs([(c, 2), (d, 2)])\n",
-    "p.extend(sym.plot(x_3plot2, legend = True, line_color='g', show = False))\n",
+    "p.extend(sym.plot(x_3plot2, legend=True, line_color=\"g\", show=False))\n",
     "x_3plot2 = x_3.subs([(c, 1), (d, 2)])\n",
-    "p.extend(sym.plot(x_3plot2, legend = True, line_color='r', show = False))\n",
+    "p.extend(sym.plot(x_3plot2, legend=True, line_color=\"r\", show=False))\n",
     "x_3plot2 = x_3.subs([(c, 6.593406593406594), (d, 25.87252747252748)])\n",
-    "p.extend(sym.plot(x_3plot2, legend = True, line_color='k', show = False))\n",
+    "p.extend(sym.plot(x_3plot2, legend=True, line_color=\"k\", show=False))\n",
     "p.show()"
    ]
   },
@@ -591,21 +601,21 @@
     }
    ],
    "source": [
-    "omega = sym.symbols('omega', positive = True)\n",
-    "F = omega/(s**2 * omega**2)\n",
+    "omega = sym.symbols(\"omega\", positive=True)\n",
+    "F = omega / (s**2 * omega**2)\n",
     "X_3 = G_theta * F\n",
     "x_3 = sym.inverse_laplace_transform(X_3, s, t)\n",
     "sym.pprint(x_3)\n",
     "\n",
     "# TODO fix?\n",
     "x_3plot = x_3.subs([(c, 1), (d, 1), (omega, 1)])\n",
-    "p = sym.plot(x_3plot, (t,-15,15), legend = True, show = False)\n",
+    "p = sym.plot(x_3plot, (t, -15, 15), legend=True, show=False)\n",
     "x_3plot2 = x_3.subs([(c, 2), (d, 2), (omega, 1)])\n",
-    "p.extend(sym.plot(x_3plot2, legend = True, line_color='g', show = False))\n",
+    "p.extend(sym.plot(x_3plot2, legend=True, line_color=\"g\", show=False))\n",
     "x_3plot2 = x_3.subs([(c, 1), (d, 2), (omega, 1)])\n",
-    "p.extend(sym.plot(x_3plot2, legend = True, line_color='r', show = False))\n",
+    "p.extend(sym.plot(x_3plot2, legend=True, line_color=\"r\", show=False))\n",
     "x_3plot2 = x_3.subs([(c, 2), (d, 1), (omega, 1)])\n",
-    "p.extend(sym.plot(x_3plot2, legend = True, line_color='k', show = False))\n",
+    "p.extend(sym.plot(x_3plot2, legend=True, line_color=\"k\", show=False))\n",
     "p.show()"
    ]
   }
