--- a/simulation/inverted_pendulum_pid_control.ipynb
+++ b/simulation/inverted_pendulum_pid_control.ipynb
@@ -26,29 +26,30 @@
     }
    ],
    "source": [
-    "import control as ctrl\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "\n",
+    "import control as ctrl\n",
     "\n",
     "##################\n",
     "###### VARS ######\n",
     "##################\n",
     "\n",
-    "M = 0.3     # Mass of cart in kg\n",
-    "m = 0.1     # Mass of pendulum rod in kg\n",
-    "l = 0.35    # HALF-length of pendulum rod in m\n",
-    "g = 9.81    # gravitational constant in m/s²\n",
+    "M = 0.3  # Mass of cart in kg\n",
+    "m = 0.1  # Mass of pendulum rod in kg\n",
+    "l = 0.35  # HALF-length of pendulum rod in m\n",
+    "g = 9.81  # gravitational constant in m/s²\n",
     "\n",
     "##################\n",
     "##################\n",
     "\n",
-    "c = 3/(l*(4*M+m))\n",
+    "c = 3 / (l * (4 * M + m))\n",
     "print(c)\n",
-    "d = (3*(M+m)*g)/(l*(4*M+m))\n",
+    "d = (3 * (M + m) * g) / (l * (4 * M + m))\n",
     "print(d)\n",
     "\n",
     "s = ctrl.TransferFunction.s\n",
-    "G_theta = -c/(s**2-d)"
+    "G_theta = -c / (s**2 - d)"
    ]
   },
   {
@@ -153,7 +154,7 @@
     "n_points = 1000\n",
     "\n",
     "ts = np.linspace(t_init, t_final, n_points)\n",
-    "u = 0.05*ts**1.8*np.cos(ts)\n",
+    "u = 0.05 * ts**1.8 * np.cos(ts)\n",
     "resp = ctrl.forced_response(G_theta, ts, u)\n",
     "\n",
     "plt.plot(resp.time, resp.outputs)\n",
@@ -208,13 +209,13 @@
     "Ki = 0\n",
     "Kd = -7\n",
     "\n",
-    "G_c = Kp + Ki/s + Kd*s\n",
+    "G_c = Kp + Ki / s + Kd * s\n",
     "\n",
     "G_load = ctrl.feedback(G_theta, G_c)\n",
     "print(G_load)\n",
     "\n",
     "t_imp, x_imp_rad = ctrl.impulse_response(G_load)\n",
-    "x_imp_deg = x_imp_rad * 180/np.pi\n",
+    "x_imp_deg = x_imp_rad * 180 / np.pi\n",
     "plt.plot(t_imp, x_imp_deg)\n",
     "# plt.xlim([0, 10])\n",
     "# plt.ylim([-50, 10])\n",
@@ -249,7 +250,7 @@
    ],
    "source": [
     "t_imp, x_imp_rad = ctrl.step_response(G_load)\n",
-    "x_imp_deg = x_imp_rad * 180/np.pi\n",
+    "x_imp_deg = x_imp_rad * 180 / np.pi\n",
     "plt.plot(t_imp, x_imp_deg)\n",
     "# plt.xlim([0, 10])\n",
     "# plt.ylim([-50, 10])\n",
@@ -312,13 +313,13 @@
     "Ki = -40\n",
     "Kd = -25\n",
     "\n",
-    "G_c = Kp + Ki/s + Kd*s\n",
+    "G_c = Kp + Ki / s + Kd * s\n",
     "\n",
     "G_load = ctrl.feedback(G_theta, G_c)\n",
     "print(G_load)\n",
     "\n",
     "t_imp, x_imp_rad = ctrl.impulse_response(G_load)\n",
-    "x_imp_deg = x_imp_rad * 180/np.pi\n",
+    "x_imp_deg = x_imp_rad * 180 / np.pi\n",
     "plt.plot(t_imp, x_imp_deg)\n",
     "plt.xlim([0, 6])\n",
     "plt.ylim([-5, 2])\n",
@@ -326,13 +327,12 @@
     "plt.show()\n",
     "\n",
     "t_imp, x_imp_rad = ctrl.step_response(G_load)\n",
-    "x_imp_deg = x_imp_rad * 180/np.pi\n",
+    "x_imp_deg = x_imp_rad * 180 / np.pi\n",
     "plt.plot(t_imp, x_imp_deg)\n",
     "plt.xlim([0, 6])\n",
     "plt.ylim([-5, 2])\n",
     "plt.grid(True)\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   }
  ],
