--- a/simulation/using_sympy.ipynb
+++ b/simulation/using_sympy.ipynb
@@ -43,8 +43,8 @@
     }
    ],
    "source": [
-    "a = sym.symbols('a', real = True)\n",
-    "x = sym.symbols('x', positive = True)\n",
+    "a = sym.symbols(\"a\", real=True)\n",
+    "x = sym.symbols(\"x\", positive=True)\n",
     "f = a * sym.sin(x**2)\n",
     "print(f\"f = {f}\")"
    ]
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "x0 = sym.sqrt(2*sym.pi)/2\n",
+    "x0 = sym.sqrt(2 * sym.pi) / 2\n",
     "f0 = f.subs([(x, x0)])\n",
     "print(f\"f_0 = f(x_0) = {f0}\")"
    ]
@@ -112,9 +112,9 @@
     }
    ],
    "source": [
-    "x, y = sym.symbols('x, y', positive = True)\n",
-    "f = x**(sym.sin(y)**2+1)\n",
-    "f0 = f.subs([(x,1), (y,0)])\n",
+    "x, y = sym.symbols(\"x, y\", positive=True)\n",
+    "f = x ** (sym.sin(y) ** 2 + 1)\n",
+    "f0 = f.subs([(x, 1), (y, 0)])\n",
     "print(f0)\n",
     "\n",
     "dfx = f.diff(x)\n",
@@ -197,8 +197,8 @@
     }
    ],
    "source": [
-    "x, y, a = sym.symbols('x, y, a', positive = True)\n",
-    "f = sym.log(sym.exp(a*x) + sym.exp(y))\n",
+    "x, y, a = sym.symbols(\"x, y, a\", positive=True)\n",
+    "f = sym.log(sym.exp(a * x) + sym.exp(y))\n",
     "print(f\"f = {f}\")\n",
     "dfx = f.diff(x)\n",
     "dfy = f.diff(y)\n",
@@ -210,7 +210,7 @@
     "dfy0 = dfy.subs([(x, x0), (y, y0)])\n",
     "print(f\"dfx0 = {dfx0}\")\n",
     "print(f\"dfy0 = {dfy0}\")\n",
-    "flin = f0 + dfx0*(x-x0) + dfy0*(y-y0)\n",
+    "flin = f0 + dfx0 * (x - x0) + dfy0 * (y - y0)\n",
     "print(f\"f_linearized = {flin}\")"
    ]
   },
@@ -239,7 +239,7 @@
     }
    ],
    "source": [
-    "x, y = sym.symbols('x, y', real = True)\n",
+    "x, y = sym.symbols(\"x, y\", real=True)\n",
     "f = sym.cos(x) * sym.sin(y) + sym.cos(y) * sym.sin(x)\n",
     "print(f\"f = {f}\")\n",
     "f = f.simplify()\n",
