fixed parsing bug introduced by 'ruff format'

--- a/simulation/inverted_pendulum_modelling.ipynb
+++ b/simulation/inverted_pendulum_modelling.ipynb
@@ -70,8 +70,10 @@
     }
    ],
    "source": [
+    "# ruff: skip-file\n",
+    "# pyright: reportOperatorIssue=false\n",
+    "\n",
     "import sympy as sym\n",
-    "from sympy.physics.control import *\n",
     "\n",
     "x_3, x_4, F = sym.symbols(\"x_3, x_4, F\", real=True)\n",
     "M, m, l, g = sym.symbols(\"M, m, l, g\", positive=True)\n",
