--- a/simulation/inverted_pendulum_pid_control.ipynb
+++ b/simulation/inverted_pendulum_pid_control.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d0f29910",
    "metadata": {},
    "outputs": [
@@ -26,6 +26,9 @@
     }
    ],
    "source": [
+    "# ruff: skip-file\n",
+    "# pyright: reportOperatorIssue=false\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
